--- a/index.html
+++ b/index.html
@@ -1,53 +1,81 @@
 <!DOCTYPE html>
-<html>
+<html lang="th">
 <head>
+  <meta charset="UTF-8">
   <title>ระบบบันทึกค่าบ้านเช่า</title>
+  <style>
+    body { font-family: sans-serif; max-width: 700px; margin: auto; padding: 20px; }
+    input { width: 100px; margin: 4px; }
+    .room-section { margin-bottom: 20px; border-bottom: 1px solid #ccc; padding-bottom: 10px; }
+    button { padding: 10px 20px; font-size: 16px; }
+  </style>
 </head>
 <body>
-  <h2>คำนวณและส่งข้อมูล</h2>
+  <h1>ระบบบันทึกค่าบ้านเช่า</h1>
 
   <form id="rentForm">
-    <label>ห้อง: <input type="text" name="room" required></label><br>
-    <label>ค่าห้อง: <input type="number" name="rent" required></label><br>
-    <label>หน่วยไฟ: <input type="number" name="elec" required></label><br>
-    <label>หน่วยน้ำ: <input type="number" name="water" required></label><br>
+    <div class="room-section">
+      <h3>ห้อง 1</h3>
+      ค่าห้อง: <input type="number" id="rent1" required><br>
+      หน่วยไฟ: <input type="number" id="elec1" required><br>
+      หน่วยน้ำ: <input type="number" id="water1" required><br>
+    </div>
+    <div class="room-section">
+      <h3>ห้อง 2</h3>
+      ค่าห้อง: <input type="number" id="rent2" required><br>
+      หน่วยไฟ: <input type="number" id="elec2" required><br>
+      หน่วยน้ำ: <input type="number" id="water2" required><br>
+    </div>
+    <div class="room-section">
+      <h3>ห้อง 3</h3>
+      ค่าห้อง: <input type="number" id="rent3" required><br>
+      หน่วยไฟ: <input type="number" id="elec3" required><br>
+      หน่วยน้ำ: <input type="number" id="water3" required><br>
+    </div>
+
     <button type="submit">ส่งข้อมูล</button>
   </form>
 
-  <p id="status"></p>
+  <p id="result"></p>
 
   <script>
-    const form = document.getElementById("rentForm");
-    const status = document.getElementById("status");
-
-    form.addEventListener("submit", function(e) {
+    document.getElementById("rentForm").addEventListener("submit", async function(e) {
       e.preventDefault();
 
-      const formData = new FormData(form);
-      const roomData = {
-        room: formData.get("room"),
-        rent: Number(formData.get("rent")),
-        elec: Number(formData.get("elec")),
-        water: Number(formData.get("water")),
-        total: Number(formData.get("rent")) + (Number(formData.get("elec")) * 8) + (Number(formData.get("water")) * 18)
-      };
+      const rooms = [];
 
-      fetch("https://script.google.com/macros/s/AKfycbwHVvXqpcr4Q24s0yPYJzekU4gtRMPWbMgaBhFxUORmeycR_UfOgg5aCeHm4qYlkLHp/exec", {
-        method: "POST",
-        body: JSON.stringify([roomData]),
-        headers: {
-          "Content-Type": "application/json"
-        }
-      })
-      .then(res => res.text())
-      .then(msg => {
-        status.textContent = "ส่งข้อมูลสำเร็จ!";
-        form.reset();
-      })
-      .catch(err => {
-        status.textContent = "ส่งข้อมูลไม่สำเร็จ";
-        console.error(err);
-      });
+      for (let i = 1; i <= 3; i++) {
+        const rent = Number(document.getElementById(`rent${i}`).value);
+        const elec = Number(document.getElementById(`elec${i}`).value);
+        const water = Number(document.getElementById(`water${i}`).value);
+        const total = rent + elec + water;
+
+        rooms.push({
+          room: `ห้อง ${i}`,
+          rent: rent,
+          elec: elec,
+          water: water,
+          total: total
+        });
+      }
+
+      try {
+        const response = await fetch("https://script.google.com/macros/s/AKfycbwHVvXqpcr4Q24s0yPYJzekU4gtRMPWbMgaBhFxUORmeycR_UfOgg5aCeHm4qYlkLHp/exec", {
+          method: "POST",
+          body: JSON.stringify(rooms),
+          headers: {
+            "Content-Type": "application/json"
+          }
+        });
+
+        const text = await response.text();
+        document.getElementById("result").innerText = text === "Success" 
+          ? "✅ ส่งข้อมูลสำเร็จ!" 
+          : "❌ มีบางอย่างผิดพลาด: " + text;
+
+      } catch (err) {
+        document.getElementById("result").innerText = "❌ ไม่สามารถเชื่อมต่อได้: " + err;
+      }
     });
   </script>
 </body>
